@@ -22,5 +22,14 @@ EXTRA_DIST = README README.follow README.term README.modules \
 		powwow.doc powwow.help powwow.6 plugtest.c debian/rules \
 		debian/control debian/changelog
 
+CLEANFILES = powwow.6
+
+powwow.6: powwow.6.utf-8
+if MAN_PAGE_ENCODING_IS_UTF_8
+	cp $< $@
+else
+	iconv -f UTF-8 -t "$(MAN_PAGE_ENCODING)" < $< > $@
+endif
+
 plugtest.so: plugtest.c
 	gcc -shared -o plugtest.so plugtest.c
